fixes spacing between .intro p and .intro h3

--- a/src/login/styles/_typography.scss
+++ b/src/login/styles/_typography.scss
@@ -68,15 +68,11 @@ p.steps {
   & h4 {
     font-size: 1.5rem;
     line-height: 2.125rem;
-    // margin-top: 2rem;
     margin-bottom: 1rem;
     font-weight: 700;
   }
-  & p {
-    padding-bottom: 0;
-  }
   & h3 {
-    margin-top: 2rem;
+    margin-top: 1rem;
     margin-bottom: 1rem;
   }
 }
